GetPomodoros のクエリパラメータに対応
